Updated the icons+spacing, updated font rendered, fixed tally container items

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 * {
     box-sizing: border-box;
     width: 992px;
-    font-family: 'Raleway';
+    font-family: 'Raleway', sans-serif;
     font-size: 18px;
     color: #000000;
     padding: 5px 10px;
@@ -20,7 +20,7 @@ i {
 header {
     display: flex;
     flex-flow: row nowrap;
-    justify-content: space-between safe;
+    justify-content: space-between;
     gap: 100%;
 }
 
@@ -77,7 +77,7 @@ nav li:hover {
 
 .welcome-container p {
     font-size: 12.5px;
-    padding-left:9px;
+    padding-left: 9px;
 }
 
 
@@ -95,7 +95,7 @@ nav li:hover {
 .search-container {
     padding: 0px;
     position: relative;
-    right:2px;
+    right: 2px;
 }
 
 #gps-btn {
@@ -130,7 +130,7 @@ nav li:hover {
 #query::placeholder {
     color: black;
     opacity: 1;
-    font-weight: 900;
+    font-weight: bold;
     font-size: 14px;
     padding: 5px 0px;
 }
@@ -143,7 +143,7 @@ nav li:hover {
     position: relative;
     right: 12px;
     font-size: 12px;
-    padding:9.5px 0px;
+    padding: 9.5px 0px;
     top: -2px;
     font-weight: bold;
     border-bottom-right-radius: 10px;
@@ -165,9 +165,9 @@ nav li:hover {
     justify-content: left;
     align-items: center;
     gap: 18px;
-    padding-top: 30px;
+    padding-top: 10px;
     font-weight: bold;
-    padding-left:0px;
+    padding-left: 0px;
 }
 
 .filter-container p {
@@ -188,8 +188,6 @@ nav li:hover {
     height: 42px;
     gap: 3px;
 
-
-
 }
 
 .btn2 {
@@ -201,7 +199,7 @@ nav li:hover {
     background-color: white;
     border-radius: 30px;
     font-weight: bold;
-    width: 150px;
+    width: 160px;
     height: 42px;
     gap: 3px;
 
@@ -215,7 +213,7 @@ nav li:hover {
     width: 40px;
     height: 40px;
     position: relative;
-    right: 11px;
+    right: 17px;
 }
 
 .icon-dollar i {
@@ -235,7 +233,9 @@ nav li:hover {
     padding: 0px;
     width: 90px;
     font-weight: bold;
-
+    position:relative;
+    right:12px;
+    
 
 }
 
@@ -247,49 +247,19 @@ nav li:hover {
     width: 40px;
     height: 40px;
     position: relative;
-    right: 12px;
+    right: 18px;
 
 }
 
 .icon-family i {
-    font-size: 14px;
-    position: relative;
-    color: #0065FC;
-    right: 6px;
-    top:1px;
-}
-
-.btn2-text{
-    font-size: 14px;
-    font-weight: 900;
-    text-align: left;
-    white-space: nowrap;
-    padding: 0px;
-    width: 90px;
-    justify-self: left;
-    font-weight: bold;
-}
-
-.icon-romantic{
-    border-radius: 50%;
-    overflow: visible;
-    border: 1px solid #DEEBFF;
-    background-color: #DEEBFF;
-    width: 40px;
-    height: 40px;
-    position: relative;
-    right:16px;
-}
-
-.icon-romantic i{
     font-size: 15px;
     position: relative;
     color: #0065FC;
-    right:8px;
-    top:2px;
+    right: 7px;
+    top: 2px;
 }
 
-.btn3-text{
+.btn2-text {
     font-size: 14px;
     font-weight: 900;
     text-align: left;
@@ -297,9 +267,11 @@ nav li:hover {
     padding: 0px;
     width: 90px;
     font-weight: bold;
+    position: relative;
+    right:10px;
 }
 
-.icon-pet{
+.icon-romantic {
     border-radius: 50%;
     overflow: visible;
     border: 1px solid #DEEBFF;
@@ -307,17 +279,18 @@ nav li:hover {
     width: 40px;
     height: 40px;
     position: relative;
-    right:15px;
+    right: 16px;
 }
 
-.icon-pet i{
-    font-size: 14px;
+.icon-romantic i {
+    font-size: 15px;
     position: relative;
     color: #0065FC;
-    right:8px;
+    right: 8px;
+    top: 2px;
 }
 
-.btn4-text{
+.btn3-text {
     font-size: 14px;
     font-weight: 900;
     text-align: left;
@@ -325,6 +298,39 @@ nav li:hover {
     padding: 0px;
     width: 90px;
     font-weight: bold;
+    position:relative;
+    right:8px;
+}
+
+.icon-pet {
+    border-radius: 50%;
+    overflow: visible;
+    border: 1px solid #DEEBFF;
+    background-color: #DEEBFF;
+    width: 40px;
+    height: 40px;
+    position: relative;
+    right: 16px;
+}
+
+.icon-pet i {
+    font-size: 14px;
+    position: relative;
+    color: #0065FC;
+    right: 8px;
+    top:2px;
+}
+
+.btn4-text {
+    font-size: 14px;
+    font-weight: 900;
+    text-align: left;
+    white-space: nowrap;
+    padding: 0px;
+    width: 90px;
+    font-weight: bold;
+    position:relative;
+    right: 7px;
 }
 
 
@@ -343,30 +349,41 @@ nav li:hover {
 .tally-container {
     display: flex;
     flex-flow: row nowrap;
+    padding-left: 2px;
+    gap:0px;
+    align-items: baseline;
+    
 }
 
 .tally-container p {
     width: 325px;
-    font-size: 13px;
+    font-size: 12.5px;
 
 }
 
-.fa-stack {
-    bottom: 12px;
-    right: 6px;
-    font-size: 15px;
-    padding: 15px;
+.icon-info{
+   border: 1.5px solid #D3D3D3;
+   border-radius: 50%;
+   width:23px;
+   height:23px;
+   position:relative;
+   left: 2px;
+   
+   top:6px;
+   
+
+  
 }
 
-.info-icon-background {
-    color: #F2F2F2;
-    left: 4px;
-}
-
-.info-icon-foreground {
+.icon-info i {
     color: #0065FC;
-    left: 10px;
-    font-size: 13px;
+    font-size: 10px;
+    position:relative;
+    right: 12px;
+    top:-6px;
+
+    
+    
 
 }
 
